Horizonriver QA20-Mar-2017/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Account_Payable_Terms__c</fullName>
        <inlineHelpText>Grace period customers give until payment is due. If you are Net 30, put 30 in this field. If you are a Due Upon Receipt customer, put zero to make the issue and due date be the same.</inlineHelpText>
        <label>Account Payable Days Due</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Accounting_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates account is eligible for use in accounting application.</inlineHelpText>
        <label>Accounting Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Accounting_Type__c</fullName>
        <inlineHelpText>Used in filtered lookups for Accounts Payable and Billing screens to limit selection of Accounts to those marked as Customers or Vendors for use by Accounting.</inlineHelpText>
        <label>Accounting Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer and Vendor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Activity_Statement_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to configure formatting and display of fields in Activity Statement PDF. Overrides the default Activity Statement defined in Accounting Settings.</inlineHelpText>
        <label>Activity Statement Format</label>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Accounts (Activity Statement Format)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Alternate_Payee_Name__c</fullName>
        <inlineHelpText>Alternate payee name which can be used to populate the payee field on a cash disbursement.</inlineHelpText>
        <label>Alternate Payee Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used as billing contact in Accounting Seed Billings.</inlineHelpText>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Days_Due__c</fullName>
        <inlineHelpText>Used to calculate billing due date. Billing date minus Billing days offset equals due date.</inlineHelpText>
        <label>Billing Days Due</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Discount_Days_Due__c</fullName>
        <inlineHelpText>Used to calculate payment due date for a prompt payment discount on a billing.</inlineHelpText>
        <label>Billing Discount Days Due</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Discount_Percent__c</fullName>
        <inlineHelpText>Used to determine the discount off the total price of a billing if payment is received within billing discount days due.</inlineHelpText>
        <label>Billing Discount %</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Email__c</fullName>
        <inlineHelpText>This field has been deprecated.</inlineHelpText>
        <label>zDep-Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to configure formatting and display of fields in Billing PDF. Overrides the default Billing Format defined in Accounting Settings.</inlineHelpText>
        <label>Billing Format</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Billing</value>
            </filterItems>
            <infoMessage>The Type must equal &quot;Billing&quot;</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Accounts (Billing Format)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Terms_Name__c</fullName>
        <inlineHelpText>The name of the billing terms as you would like them to appear on the invoice.</inlineHelpText>
        <label>Billing Terms Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Credit_Card_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field denotes a credit card vendor. If checked this account will display in the credit card field filtered lookup on the expense object.</inlineHelpText>
        <label>Credit Card Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_1099_Box__c</fullName>
        <inlineHelpText>Marks default 1099 box for reporting cash disbursements to a 1099 vendor.</inlineHelpText>
        <label>Default 1099 Box</label>
        <picklist>
            <picklistValues>
                <fullName>1. Rents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Royalties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Other Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Federal Tax Withheld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Fishing Boat Proceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Medical Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Nonemployee Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Substitute Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10. Crop Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13. Golden Parachute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14. Attorney Proceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15a. Section 409A Deferrals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15b. Section 409A Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16. State Tax Withheld</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_Expense_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this field is populated and this account is selected as the vendor on an account payable, the account payable line Expense GL Account field will be populated with this value dynamically.</inlineHelpText>
        <label>Default Expense GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Discount_Days_Due__c</fullName>
        <inlineHelpText>Used in the calculation of payment discounts in the accounts payable process. A discount will be automatically taken in the cash disbursements process if payment is made within the discount days due of the issue date.</inlineHelpText>
        <label>Account Payable Discount Days Due</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Discount_Percent__c</fullName>
        <inlineHelpText>The discount percentage of an account payable that a vendor provides as part of prompt payment terms.</inlineHelpText>
        <label>Account Payable Discount %</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AcctSeed__File_Import_Match_Name__c</fullName>
        <inlineHelpText>Used to match the vendor account to a specific file import related transaction. This field is only used when importing financial files such as a bank statement via the Import Financial File tab.</inlineHelpText>
        <label>File Import Match Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Traditional Sub-General Ledger account segment used to report on divisions, departments, geographies, cost centers, profit centers or business units.</inlineHelpText>
        <label>GL Account Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Accounts (GL Account Variable 1)</relationshipLabel>
        <relationshipName>AccountsGLAV1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Traditional Sub-General Ledger account segment used to report on divisions, departments, geographies, cost centers, profit centers or business units.</inlineHelpText>
        <label>GL Account Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Accounts (GL Account Variable 2)</relationshipLabel>
        <relationshipName>AccountsGLAV2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Traditional Sub-General Ledger account segment used to report on divisions, departments, geographies, cost centers, profit centers or business units.</inlineHelpText>
        <label>GL Account Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Accounts (GL Account Variable 3)</relationshipLabel>
        <relationshipName>AccountsGLAV3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Outstanding_Statement_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to configure formatting and display of fields in Outstanding Statement PDF. Overrides the default Outstanding Statement defined in Accounting Settings.</inlineHelpText>
        <label>Outstanding Statement Format</label>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Shipping_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Shipping Contact)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Stripe_Customer_Id__c</fullName>
        <label>Stripe Customer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Taxpayer_Identification_Number__c</fullName>
        <label>Taxpayer Identification Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__X1099_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Marks vendor to report cash disbursements on 1099-Misc form.</inlineHelpText>
        <label>1099 Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cable_Provider__c</fullName>
        <label>Cable Provider</label>
        <picklist>
            <picklistValues>
                <fullName>BrightHouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buckeye Cable System Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comcast: In Footprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comcast: Service Existing at this Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comcast: Service Nearby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCI CABLE INC.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LONGVIEW CABLE TELEVISION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mediacom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Cable Comp Assoc. w Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optimum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spectrum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spectrum: Not Serviceable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SuddenLink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Warner Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>Equipment</label>
        <picklist>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lease_Option__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lease Option?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Orig_Order__c</fullName>
        <label>Orig Order</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <formula>IF(AND(ISPICKVAL(of_Switches__c, &quot;3&quot;),ISPICKVAL(of_WAPs__c,&quot;4&quot;)),9031.69, 
IF(AND(ISPICKVAL(of_Switches__c, &quot;3&quot;),ISPICKVAL(of_WAPs__c,&quot;3&quot;)),8585.04, 
IF(AND(ISPICKVAL(of_Switches__c, &quot;3&quot;),ISPICKVAL(of_WAPs__c,&quot;5&quot;)),9478.34, 
IF(AND(ISPICKVAL(of_Switches__c, &quot;2&quot;),ISPICKVAL(of_WAPs__c,&quot;4&quot;)),8490.30, 
IF(AND(ISPICKVAL(of_Switches__c, &quot;2&quot;),ISPICKVAL(of_WAPs__c,&quot;5&quot;)),8936.95, 
8043.65)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama/FL Panhandle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlanta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chicago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cin/KY/WV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleveland OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Columbus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dallas/Ft. Worth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detroit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Houston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indianapolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inland Empire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa/Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jacksonville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Las Vegas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los Angeles Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los Angeles Northwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los Angeles West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland/DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memphis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miami</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minneapolis</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_ID__c</fullName>
        <label>Sales ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <label>Site Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Number__c</fullName>
        <externalId>true</externalId>
        <label>Clinic Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Structure__c</fullName>
        <label>Structure</label>
        <picklist>
            <picklistValues>
                <fullName>1NA00</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <picklist>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <picklist>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>G4316</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X824EmailTemplate__c</fullName>
        <label>8/24 Email Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_IMB_Opportunity__c</fullName>
        <label># of IMB Opportunity</label>
        <summaryFilterItems>
            <field>Opportunity.Internet_Monthly_Billing__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_NMB_Opportunity__c</fullName>
        <label># of NMB Opportunity</label>
        <summaryFilterItems>
            <field>Opportunity.Network_Monthly_Billing__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Opportunities__c</fullName>
        <label># of Opportunities</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Switches__c</fullName>
        <label># of Switches</label>
        <picklist>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_WAPs__c</fullName>
        <label># of WAPs</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Email__c</fullName>
        <label>Account&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Invalid_SendGrid_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invalid Account</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>General_Client</fullName>
        <active>true</active>
        <label>General Client</label>
    </recordTypes>
    <recordTypes>
        <fullName>Massage_Envy</fullName>
        <active>true</active>
        <label>Massage Envy</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor</fullName>
        <active>true</active>
        <label>Vendor</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>AcctSeed__Account_Payable_Terms_Positive_Value</fullName>
        <active>true</active>
        <description>The account payable terms field must be a positive value.</description>
        <errorConditionFormula>AcctSeed__Account_Payable_Terms__c &lt; 0</errorConditionFormula>
        <errorDisplayField>AcctSeed__Account_Payable_Terms__c</errorDisplayField>
        <errorMessage>The account payable terms field must be a positive number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Discount_Days_Due_Positive_Value</fullName>
        <active>true</active>
        <description>The discount days field must be a positive value.</description>
        <errorConditionFormula>AcctSeed__Discount_Days_Due__c &lt; 0</errorConditionFormula>
        <errorDisplayField>AcctSeed__Discount_Days_Due__c</errorDisplayField>
        <errorMessage>The discount days due field must be a positive number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Discount_Percent_Positive_Value</fullName>
        <active>true</active>
        <description>The discount percent field must be a positive value.</description>
        <errorConditionFormula>AcctSeed__Discount_Percent__c &lt; 0</errorConditionFormula>
        <errorDisplayField>AcctSeed__Discount_Percent__c</errorDisplayField>
        <errorMessage>The discount % field must be a positive number.</errorMessage>
    </validationRules>
</CustomObject>